--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testing?serverTimezone=UTC
 spring.datasource.username=pavlo
 spring.datasource.password=grib1111
+
+page.size = 12
