--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto= create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_test?serverTimezone=UTC
-spring.datasource.username=pavlo
+spring.datasource.username=pavel
 spring.datasource.password=grib1111
