--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "file-loader": "^6.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "rest": "^1.3.1",
     "style-loader": "^1.2.1"
   },
