--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testing?serverTimezone=UTC
-spring.datasource.username=pavlo
+spring.datasource.username=pavel
 spring.datasource.password=grib1111
 
 page.size = 12
